[gd_scene load_steps=2 format=3 uid="uid://dq8h7k5m9n2p4"]

[ext_resource type="Script" path="res://view/hand/play_hand.gd" id="1_hand"]

[node name="PlayHand" type="CanvasLayer"]
script = ExtResource("1_hand")

[node name="HandContainer" type="Control" parent="."]
anchors_preset = 0
offset_left = 400.0
offset_top = 540.0
offset_right = 880.0
offset_bottom = 720.0
mouse_filter = 2

[node name="CardCountLabel" type="Label" parent="HandContainer"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 100.0
offset_bottom = 25.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Cards: 7"
horizontal_alignment = 0

[node name="MulliganButton" type="Button" parent="HandContainer"]
layout_mode = 0
offset_left = 110.0
offset_top = 5.0
offset_right = 240.0
offset_bottom = 28.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.4, 0.2, 1)
theme_override_font_sizes/font_size = 11
text = "Mull Again (1 Gold)"
disabled = true
focus_mode = 0

[node name="CardContainer" type="Control" parent="HandContainer"]
layout_mode = 0
offset_left = 15.0
offset_top = 35.0
offset_right = 465.0
offset_bottom = 175.0
mouse_filter = 2
